--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            font-size: 16px;
+            font-size: 12px;
             line-height: 1.5;
             margin: 0;
             padding: 0;
-            color: white;
+            color: #ccc9;
             background-color: black;
         }
         p, h2 {
@@ -20,18 +20,7 @@
     </style>
 </head>
 <body>
-
-    <h2>Security info</h2>
-    <p>If you're trying to see if there's some goofy stuff in the script, you can look in the 'setup_drive.sh' because that's where all the code is. Also, there is no JavaScript on this website. Plain HTML and shell code.</p>
-
-    <h2>How to access the drive server?</h2>
-    <p>Copy paste the program listed below</p>
-    <p>curl -O http://.static.com/path/to/setup_drive.sh;
-chmod +x setup_drive.sh;
-./setup_drive.sh</p>
-
-    <h2>Why static domain?</h2>
-    <p>I'm not getting paid for making these so of course I won't spend any money for a custom domain hosting. I'm just making these because I just wanted to.</p>
-
+    <h2>Nothing here for now...</h2>
+    <p>Boring...</p>
 </body>
 </html>
