--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         function decrementNumber() {
             updateNumberBoxes(number);
             if (number === 0) {
-                window.location.href = 'told-you.html';
+                window.location.href = 'told-you';
             } else {
                 number--;
                 setTimeout(decrementNumber, interval);
